--- a/index.html
+++ b/index.html
@@ -137,6 +137,64 @@
         </div>
     </section>
     <!-- ----------------About section ------------------>
+    <!-- ------------services section--------------- -->
+    <section id="services">
+        <div class="container">
+            <div class="services wrapper">
+
+                <div class="services-head shadow-lg">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3 class="service-heading">website design</h3>
+                    <p class="services-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
+                        architecto
+                        vero dolorem quia eaque
+                        ea,
+                        incidunt repellat delectus maxime sit! Sapiente incidunt, eius tempora repellendus quaerat
+                        optio
+                        ducimus! Itaque, aliquam?
+                    </p>
+                </div>
+                <div class="services-head shadow-lg">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3 class="service-heading">responsive web design</h3>
+                    <p class="services-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
+                        architecto
+                        vero dolorem quia eaque
+                        ea,
+                        incidunt repellat delectus maxime sit! Sapiente incidunt, eius tempora repellendus quaerat
+                        optio
+                        ducimus! Itaque, aliquam?
+                    </p>
+                </div>
+                <div class="services-head shadow-lg">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3 class="service-heading">web development</h3>
+                    <p class="services-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
+                        architecto
+                        vero dolorem quia eaque
+                        ea,
+                        incidunt repellat delectus maxime sit! Sapiente incidunt, eius tempora repellendus quaerat
+                        optio
+                        ducimus! Itaque, aliquam?
+                    </p>
+                </div>
+                <div class="services-head shadow-lg">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3 class="service-heading">creative design</h3>
+                    <p class="services-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
+                        architecto
+                        vero dolorem quia eaque
+                        ea,
+                        incidunt repellat delectus maxime sit! Sapiente incidunt, eius tempora repellendus quaerat
+                        optio
+                        ducimus! Itaque, aliquam?
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- ------------services section--------------- -->
 
     <!----------------- html close------------ -->
 
