--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#about">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">About</a>
+                            <a class="nav-link active" href="#about">About</a>
                         </li>
 
                         <!--  -->
@@ -64,19 +64,19 @@
                                 Services
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Html</a></li>
-                                <li><a class="dropdown-item" href="#">Css</a></li>
+                                <li><a class="dropdown-item" href="#services">Html</a></li>
+                                <li><a class="dropdown-item" href="#services">Css</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Javascript</a></li>
+                                <li><a class="dropdown-item" href="#services">Javascript</a></li>
                             </ul>
                         </li>
 
                         <!--  -->
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                            <a class="nav-link active" href="#contact" tabindex="-1" aria-disabled="true">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -140,6 +140,9 @@
     <!-- ------------services section--------------- -->
     <section id="services">
         <div class="container">
+            <div class="services-title">
+                <h3 class="services-text">Services</h3>
+            </div>
             <div class="services wrapper">
 
                 <div class="services-head shadow-lg">
@@ -195,6 +198,133 @@
         </div>
     </section>
     <!-- ------------services section--------------- -->
+    <!--=====-------------- contact section ---------------->
+    <section id="contact">
+        <div class="container">
+            <div class="contact-heading">
+                <h3 class="contact-text">Contact</h3>
+            </div>
+            <div class="contact-wrapper">
+                <div class="contact-left shadow-lg p-5">
+                    <div class="contact-title">
+                        <h5>Contact-Information</h5>
+                    </div>
+                    <div class="contact-info">
+                        <li>
+                            <i class="fa-solid fa-phone"></i>
+                            +01795693042
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-envelope"></i>
+                            sazzadssd512@gmail.com
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-location-dot"></i>
+                            102,street 2771 Ban
+                        </li>
+                    </div>
+                </div>
+                <!-- contact left close -->
+                <!-- contact right start -->
+                <div class="contact-right">
+                    <form action="">
+                        <div class="left-iput">
+                            <label for="fname">First Name</label>
+                            <input type="text" class="form-control" id="fname" name="fname"
+                                placeholder="your first name..">
+                            <!--  -->
+                            <label for="email">E-mail</label>
+                            <input type="email" id="email" class="form-control" placeholder=" your email">
+                            <!--  -->
+
+                        </div>
+                        <div class="right-input">
+                            <!--  -->
+                            <label for="lastName">Last Name</label>
+                            <input type="text" id="lastName" class="form-control" placeholder="your last name">
+                            <!--  -->
+                            <label for="number">Phone</label>
+                            <input type="npumber" id="number" class="form-control">
+                        </div>
+                    </form>
+
+                    <!-- bottom right -->
+                    <div class="bottom-right">
+                        <h6>what the of website do you need</h6>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Web Design</label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                            <label class="form-check-labe2" for="exampleCheck1">Web development</label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck3">
+                            <label class="form-check-labe3" for="exampleCheck2">Responsive Design</label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck4">
+                            <label class="form-check-labe4" for="exampleCheck1">Creative Design</label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck5">
+                            <label class="form-check-labe" for="exampleCheck1" required>Other</label>
+                        </div>
+
+                    </div>
+                    <h5>Message</h5>
+                    <textarea name="text" id="" class="form-control" placeholder="type your message"></textarea>
+                    <div class="contact-btn">
+                        <button class="btn btn-outline-primary">Send Message</button>
+                    </div>
+                    <!-- bottom right -->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--=====-------------- contact section ---------------->
+
+    <!-- --------------------footer------------------------ -->
+    <footer>
+        <div class="footer-title">
+            <h3 class="footer-text">Footer</h3>
+        </div>
+        <div class="footer-wrapper">
+            <div class="footer-left">
+                <h3 class="middle-text">About</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo in odit porro ullam nam ducimus, ea
+                    ratione iure magnam exercitationem.
+
+                </p>
+                <div class="footer-icon">
+                    <li class="icon-footer"><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                    <li class="icon-footer"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon-footer"><a href=""><i class="fa-brands fa-instagram-square"></i></a></li>
+                    <li class="icon-footer"><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                </div>
+            </div>
+            <!-- footer middle -->
+            <div class="footer-middle">
+                <h3>Quick links</h3>
+                <li class="right-icons">About</li>
+                <li class="right-icons">FAQ</li>
+                <li class="right-icons">Help</li>
+                <li class="right-icons">Contact</li>
+            </div>
+            <!-- footer right -->
+            <div class="footer-right">
+                <h3>Contact Info</h3>
+                <li class="right-icon"><i class="fa-solid fa-location-dot"></i>
+                    Location:Dhaka,Mirpur 10</li>
+                <li class="right-icon"><i class="fa-solid fa-phone"></i>
+                    Phone:01795693042</li>
+                <li class="right-icon"><i class="fa-solid fa-envelope"></i>
+                    Email:sazzadssd512@gmail.com</li>
+            </div>
+        </div>
+    </footer>
+    <!-- --------------------footer------------------------ -->
 
     <!----------------- html close------------ -->
 
