--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
 
                 <div class="services-head shadow-lg">
                     <i class="fa-solid fa-laptop-code"></i>
-                    <h3 class="service-heading">website design</h3>
+                    <div class="servicess-title">
+                        <h3 class="service-heading">web design</h3>
+                    </div>
                     <p class="services-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
                         architecto
                         vero dolorem quia eaque
@@ -159,7 +161,9 @@
                 </div>
                 <div class="services-head shadow-lg">
                     <i class="fa-solid fa-laptop-code"></i>
-                    <h3 class="service-heading">responsive web design</h3>
+                    <div class="servicess-title">
+                        <h3 class="service-heading">responsive web design</h3>
+                    </div>
                     <p class="services-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
                         architecto
                         vero dolorem quia eaque
@@ -171,7 +175,9 @@
                 </div>
                 <div class="services-head shadow-lg">
                     <i class="fa-solid fa-laptop-code"></i>
-                    <h3 class="service-heading">web development</h3>
+                    <div class="servicess-title">
+                        <h3 class="service-heading">web development</h3>
+                    </div>
                     <p class="services-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
                         architecto
                         vero dolorem quia eaque
@@ -183,7 +189,9 @@
                 </div>
                 <div class="services-head shadow-lg">
                     <i class="fa-solid fa-laptop-code"></i>
-                    <h3 class="service-heading">creative design</h3>
+                    <div class="servicess-title">
+                        <h3 class="service-heading">creative design</h3>
+                    </div>
                     <p class="services-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius
                         architecto
                         vero dolorem quia eaque
